--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Locadora-Teste-LabsIf",
+  "name": "locadora",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "migration:create": "npm run typeorm -- migration:create ./src/db/migrations/$npm_config_name",
+    "migration:generate": "npm run typeorm -- migration:generate ./src/db/migrations/$npm_config_name -d ./src/db/typeOrm.migration-config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d ./src/db/typeOrm.migration-config.ts",
+    "migration:revert": "npm run typeorm migration:revert -- -d ./src/db/typeOrm.migration-config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -26,12 +31,18 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/uuid": "^9.0.8",
+    "are-we-there-yet": "^4.0.2",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "gauge": "^5.0.2",
+    "npmlog": "^7.0.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
