--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/uuid": "^9.0.8",
     "are-we-there-yet": "^4.0.2",
     "bcrypt": "^5.1.1",
