--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "gauge": "^5.0.2",
+    "moment": "^2.30.1",
     "npmlog": "^7.0.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
