--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "migration:revert": "npm run typeorm migration:revert -- -d ./src/db/typeOrm.migration-config.ts"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "@types/bcrypt": "^5.0.2",
     "@types/uuid": "^9.0.8",
@@ -44,6 +46,8 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "save": "^2.9.0",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   },
